2009-08-09  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/hideshow.el (hs-special-modes-alist): Don't use
	hs-c-like-adjust-block-beginning.
	(hs-hide-block-at-point): Stop hiding at the beginning of
	hs-block-end-regexp (Bug#700).

2009-08-09  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gdb-mi.el (gdb-gud-context-call): Does not need to be
	a macro.
	(gdb-registers-handler-custom): Do not fail when register names
	are unavailable.

2009-08-08  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gdb-mi.el (gdb-control-all-threads)
	(gdb-control-current-thread): Interactive setters for
	`gdb-gud-control-all-threads' to use in menu.
	(gdb-show-run-p): Show «Go» when process is not active.
	(gud-tool-bar-map): Add non-stop/A,T indicator. Uses
	gud/thread.xpm and gud/all.xpm.

2009-08-08  Yoni Rabkin  <yoni@rabkins.net>

	* net/net-utils.el (net-utils-font-lock-keywords): New var.
	(nslookup-font-lock-keywords): Make it a variable.
	(net-utils-mode): New mode for viewing diagnostic network output.
	(net-utils-remove-ctrl-m-filter): Set inhibit-read-only.
	(net-utils-run-simple): New function.
	(ifconfig, iwconfig, netstat, arp, route): Use it.

2009-08-08  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gdb-mi.el (gdb-read-memory-custom)
	(gdb-memory-set-address, def-gdb-set-positive-number)
	(def-gdb-memory-format, def-gdb-memory-unit): Update memory buffer
	after changing settings.
	(gdb-invalidate-disassembly): Update when first shown.
	(gdb-edit-locals-value): Fixed.
	(gdb-registers-handler-custom): Print registers in right order and
	allow changing register values (only for current thread yet).
	(gdb-breakpoints-mode-map): Don't assume threads buffer is present.
	(gdb-threads-mode-map): Don't assume breakpoints buffer is present.
	(gdb-disassembly-handler-custom, gdb-stack-list-frames-custom)
	(gdb-locals-handler-custom, gdb-registers-handler-custom): Thread
	info in mode name.
	(gdb-registers-mode-map): TAB to switch to locals.
